massive trimming of work experience, moved "about me" back to top

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <div id="about-me" class="section">
                 <article>
                     <div class="about-me-sub">
+                        <h3>[ Who Am I?: ]</h3> 
+                        <br>
+                        <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
+                        <br>
+                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
+                    </div>
+                    <div class="about-me-sub">
                         <h3>[ Experience: ]</h3> 
                         <br>
                         <p>Full stack web developer. AWS Certified Solutions Architect. Frontend, backend, and cloud infrastructure.</p>
@@ -65,62 +72,29 @@
                     <div class="about-me-sub">
                         <h3>[ Skills: ]</h3>
                         <br>
-                        <p>My techncial proficiencies include:</p>
-                                <ul>
-                                    <li>Client-side Web Development
-                                        <ul>
-                                            <li>HTML5, CSS3, Boostrap</li>
-                                            <li>JavaScript, JQuery</li> 
-                                            <li>React, Handlebars.js</li>
-                                            <li>PWAs (Progressive Web Applications), Webpack</li>
-                                        </ul>
-                                    </li>
-                                    <br>
-                                    <li>Server-side Web Development
-                                        <ul>
-                                            <li>JavaScript (Node.js, Express.js, Rambda.js) </li>
-                                            <li>Java (Spring Boot/Cloud Framework)</li>
-                                            <li>PhP</li>
-                                            <li>AWS Certified Solutions Architect</li>
-                                            <li>CI/CD Pipelines (GitLab)</li>
-                                            <li>Terraform</li>
-                                            <li>Docker</li>
-                                            <li>Kubernetes</li>
-                                            <li>Monitoring</li>
-                                            <li>Testing</li>
-                                            <li>Databases (MySQL, MongoDB, GraphQL)</li>
-                                            <li>ORMs (Sequelize SQL<>Nodejs ORM)</li>
-                                        </ul>
-                                    </li>
-                                    <br>
-                                    <li>Microsoft Office/Gsuite:
-                                        <ul>
-                                            <li>Word/Google Docs</li>
-                                            <li>Excel/Google Sheets</li>
-                                            <li>Powerpoint/Google Slides</li>
-                                            <li>Google Admin</li>
-                                        </ul>
-                                    </li>
-                                    <br>
-                                    <li>Financial Operations:
-                                        <ul>
-                                            <li>AP/AR Management</li>
-                                            <li>Payroll</li>
-                                            <li>Banking & Crypto Asset Management </li>
-                                            <li>Bookkeeping (QuickBooks)</li>
-                                        </ul>
-                                    </li>
-                                    <br>
-                                    <li>Coda/Notion/Clickup</li>
-                                    <li>HRIS Software: Gusto, JustWorks, etc</li>
-                                </ul>
-                    </div>
-                    <div class="about-me-sub">
-                        <h3>[ Who Am I?: ]</h3> 
+                        <p>Client-side Web Development:</p>
+                        <ul>
+                            <li>HTML5, CSS3, Boostrap</li>
+                            <li>JavaScript, JQuery</li> 
+                            <li>React, Handlebars.js</li>
+                            <li>PWAs (Progressive Web Applications), Webpack</li>
+                        </ul>
                         <br>
-                        <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
-                        <br>
-                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
+                        <p>Server-side Web Development</p>
+                        <ul>
+                            <li>AWS Certified Solutions Architect</li>
+                            <li>JavaScript (Node.js, Express.js, Rambda.js) </li>
+                            <li>Java (Spring Boot/Cloud Framework)</li>
+                            <li>PhP</li>
+                            <li>CI/CD Pipelines (GitLab)</li>
+                            <li>Terraform</li>
+                            <li>Docker</li>
+                            <li>Kubernetes</li>
+                            <li>Monitoring</li>
+                            <li>Testing</li>
+                            <li>Databases (MySQL, MongoDB, GraphQL)</li>
+                            <li>ORMs (Sequelize SQL<>Nodejs ORM)</li>
+                        </ul>
                     </div>
                 </article>        
             </div>
