--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="about-me-sub">
                         <h3>[ Experience: ]</h3> 
                         <br>
-                        <p>Full stack web developer. AWS Certified Solutions Architect. Frontend, backend, and cloud infrastructure.</p>
+                        <p>Full stack web developer. AWS Certified Solutions Architect. Frontend, backend, cloud infrastructure.</p>
                         <br>
                         <p>Currently Development Engineer at Sinclair Digital</p>
                         <ul>
