updated portfolio with ai email assistant project

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
                         <br>
                         <p>I graduated from Emory University in Atlanta with a degree in English and Chemistry.</p>
                         <br>
-                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong-brew">chess</a>, and cooking.</p>
+                        <p>My hobbies include working on my truck, guitar, <a style="padding: 0; text-decoration: underline;" href="https://www.chess.com/member/strong_brew">chess</a>, and cooking.</p>
                     </div>
                     <div class="about-me-sub">
                         <h3>[ Experience: ]</h3> 
                         <br>
                         <p>Full stack web developer. AWS Certified Solutions Architect. Frontend, backend, cloud infrastructure.</p>
+                        <br>
+                        <p>Experience with AI APIs, including ChatGPT (see my ai-email-assistant below!).</p>
                         <br>
                         <p>Currently Development Engineer at Sinclair Digital</p>
                         <ul>
@@ -109,6 +111,15 @@
             </div>
 
             <div id="projects">
+                <a class="link-wrap" href="https://github.com/jonathan-warkentine/TRAKS">
+                    <div id="ai-email-assistant" class="project-card"> 
+                        <h3>AI Email Assistant</h3>
+                        <div>
+                            <h4 class="github-link"><a href="https://github.com/jonathan-warkentine/ai-email-assistant">[ Repo Link ]</a></h4>
+                        </div>
+                    </div>
+                </a>
+
                 <a class="link-wrap" href="https://github.com/jonathan-warkentine/TRAKS">
                     <div id="traks" class="project-card"> 
                         <h3>TRAKS - MySQL Database CLI</h3>
