--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <ul>
                             <li>Co-architected and built custom Java Spring Cloud API Gateway, from source code to Terraform + Kubernetes cloud deployment.</li>
                             <li>Helping spearhead our orgs transition from monolith to microservice architecture</li>
-                            <li>Pioneered our Sinclair's adoption of Hashicorp Consul service discovery catalog, automating service registration with Terraform</li>
+                            <li>Pioneered Sinclair Digital's adoption of Hashicorp Consul service discovery catalog, automating service registration with Terraform</li>
                             <li>Auth0/OAuth2 authorization configuration</li>
                             <li>Architected and built JUnit Test Suites</li>
                             <li>Org-wide React Plugin Hackathon Winner</li>
